--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+lazy_static = "1.4.0"
 lsp-server = "0.5.2"
 lsp-types = "0.89.2"
 serde = "1.0"
