--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ include = ["/src", "out/README.md"]
 
 [dependencies]
 home = "0.5.3"
-lsp-server = "0.5.2"
-lsp-types = "0.89.2"
+lsp-server = "0.6.0"
+lsp-types = "0.93.0"
 serde = "1.0"
 serde_json = "1.0"
-tree-sitter = "0.20"
+tree-sitter = "0.20.6"
 tree-sitter-openscad = "0.2.0"
+linked-hash-map = "0.5.4"
+shellexpand = "2.1.0"
