--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,16 @@
 name = "openscad-language-server"
 version = "1.0.0"
 edition = "2021"
-description = "A Language Server Protocol server for OpenSCAD"
+authors = ["Leathong"]
+description = "A language(LSP) server for OpenSCAD"
 readme = "out/README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["language-server", "lsp"]
 categories = ["development-tools"]
 include = ["/src", "out/README.md"]
+
+[features]
+derive = []
 
 [dependencies]
 home = "0.5.3"
@@ -16,6 +20,7 @@ lsp-types = "0.93.0"
 serde = "1.0"
 serde_json = "1.0"
 tree-sitter = "0.20.6"
-tree-sitter-openscad = "0.3.0"
+tree-sitter-openscad = "0.4.0"
 linked-hash-map = "0.5.4"
 shellexpand = "2.1.0"
+clap = {features = ["derive"], version = "3.1.17"}
