fixed the issue that documentation not work when function/module on current file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Leathong"]
 description = "A language(LSP) server for OpenSCAD"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
-keywords = ["language-server", "lsp"]
+keywords = ["language-server", "lsp", "openscad"]
 categories = ["development-tools"]
 include = ["/src", "README.md"]
 repository = "https://github.com/Leathong/openscad-LSP"
