feat: Added rename action support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ clap = {features = ["derive"], version = "4.0.14"}
 lazy_static = "1.4.0"
 regex = "1.6.0"
 directories = "5.0.1"
+tree-sitter-traversal = "0.1.2"
