--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openscad-lsp"
-version = "1.3.0"
+version = "1.2.5"
 edition = "2021"
 authors = ["Leathong"]
 description = "A language(LSP) server for OpenSCAD"
@@ -16,12 +16,12 @@ lsp-server = "0.7.0"
 lsp-types = "0.94.0"
 serde = "1.0.145"
 serde_json = "1.0.86"
-tree-sitter = "0.25.2"
-tree-sitter-openscad-ng = "0.6.0"
+tree-sitter = "0.20.9"
+tree-sitter-openscad = "0.4.2"
 linked-hash-map = "0.5.6"
 shellexpand = "3.1.0"
 clap = {features = ["derive"], version = "4.0.14"}
 lazy_static = "1.4.0"
 regex = "1.6.0"
 directories = "5.0.1"
-baz-tree-sitter-traversal = "0.1.4"
+tree-sitter-traversal = "0.1.2"
