chore(ci): add CI check for stale Cargo.lock
Adds a new CI job that verifies Cargo.lock is up-to-date with Cargo.toml
using `cargo generate-lockfile --locked`. The job fails if the lockfile
is missing or inconsistent with the manifest.

This helps ensure reproducible builds, prevents dependency drift, and
catches stale lockfiles early in pull requests and pushes.

The check runs alongside existing jobs (check, test, fmt, clippy) without
adding significant overhead.

References:
- https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
- https://doc.rust-lang.org/cargo/faq.html#why-have-cargolock-in-version-control

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -71,3 +71,17 @@ jobs:
         with:
           command: clippy
           args: --all-features --all-targets -- -D warnings
+
+  lockfile:
+    name: Cargo.lock up-to-date?
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Check if Cargo.lock is up-to-date
+        run: cargo generate-lockfile --locked
+
