--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ lsp-server = "0.7.8"
 lsp-types = "0.94.0"
 serde = "1.0.219"
 serde_json = "1.0.86"
-tree-sitter = "0.20.10"
-tree-sitter-openscad = "0.5.1"
+tree-sitter = "0.25.4"
+tree-sitter-openscad-ng = "0.6.0"
 linked-hash-map = "0.5.6"
 shellexpand = "3.1.1"
-clap = {features = ["derive"], version = "4.5.37"}
+clap = {features = ["derive"], version = "4.5.38"}
 lazy_static = "1.5.0"
 regex = "1.11.1"
 directories = "6.0.0"
-tree-sitter-traversal = "0.1.2"
+tree-sitter-traversal2 = "0.2.1"
