--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ lazy_static = "1.5.0"
 regex = "1.11.1"
 directories = "6.0.0"
 tree-sitter-traversal2 = "0.2.1"
-topiary-core = { git = "https://github.com/tweag/topiary", version = "0.6.0" }
+topiary-core = "0.6.1"
 
 # The profile that 'dist' will build with
 [profile.dist]
