--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,4 +43,4 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-        run: cargo generate-lockfile --locked
+      - run: cargo generate-lockfile --locked
